More comment removal